--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div class="main-nav" id="sticker">
       <h2 class="name">Troy <span class = "pinkText">A</span> Wilson</h2>
         <ul class="nav">
-          <li><a class ="pinkText" href="#">Home</a></li>
-          <li><a href="#About">About</a></li>
-          <li><a href="#Portfolio">Portfolio</a></li>
-          <li><a href="#Services">Services</a></li>
-          <li><a href="#Pricing">Pricing</a></li>
-          <li><a href="#Contact">Contact</a></li>
+          <li><a class ="styledLink" id="pinkText"href="#">Home</a></li>
+          <li><a class="styledLink" href="#About">About</a></li>
+          <li><a class="styledLink" href="#Portfolio">Portfolio</a></li>
+          <li><a class="styledLink" href="#Services">Services</a></li>
+          <li><a class="styledLink" href="#Pricing">Pricing</a></li>
+          <li><a class="styledLink" href="#Contact">Contact</a></li>
         </ul>
     </div>
   </header>
@@ -36,11 +36,6 @@
       <span class="intro-span">Hey, I'm Troy!</span>
       <h3 class ="intro-title">Front-end Web Developer & Designer</h3>
 
-      <!-- <span class="intro-span">I DO </span>  HTML5, CSS3, Javascript, React, Design, etc -->
-      <!-- <br>
-      <img src ="images\html-5 (2).svg">
-      <img src ="images\css-3.svg">
-      <img src ="images\java-script.svg"> -->
       <!-- To clarify what I mean below, I want to do a cool drawing line animatin for each of the icons above -->
       <!-- Animated icons for HTML CSS Javascript, etc using keyframes and SVGs -->
       <p class="intro-p">Based in the San Francisco bay area, I specialize in Custom Front-end Development and Design</p>
@@ -137,7 +132,7 @@
               </ul>
             </div>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectSeven -->
-            <a href ="ProjectPages/projectOne.html">
+            <a class="styledLink" href ="ProjectPages/projectOne.html">
               <div class="link">
                 <p>Learn more...</p>
                 <img src ="images/arrow.svg" width="25px" height="25px">
@@ -160,7 +155,7 @@
               </ul>
             </div>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectSix -->
-            <a href ="ProjectPages/projectTwo.html">
+            <a class="styledLink" href ="ProjectPages/projectTwo.html">
               <div class="link">
                 <p>Learn more...</p>
                 <img src ="images/arrow.svg" width="25px" height="25px">
@@ -183,7 +178,7 @@
               </ul>
             </div>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectSeven -->
-            <a href ="ProjectPages/projectThree.html">
+            <a class="styledLink" href ="ProjectPages/projectThree.html">
               <div class="link">
                 <p>Learn more...</p>
                 <img src ="images/arrow.svg" width="25px" height="25px">
@@ -206,7 +201,7 @@
               </ul>
             </div>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectTen -->
-            <a href ="ProjectPages/projectFour.html">
+            <a class="styledLink" href ="ProjectPages/projectFour.html">
               <div class="link">
                 <p>Learn more...</p>
                 <img src ="images/arrow.svg" width="25px" height="25px">
@@ -229,7 +224,7 @@
               </ul>
             </div>
             <!-- https://github.com/TroyAWilson/techdegree-project-eleven -->
-            <a href ="ProjectPages/projectFive.html">
+            <a class="styledLink" href ="ProjectPages/projectFive.html">
               <div class="link">
                 <p>Learn more...</p>
                 <img src ="images/arrow.svg" width="25px" height="25px">
@@ -321,8 +316,8 @@
 
       <div class ="Pricing-box-container">
         <h4>Wordpress</h4>
-        <h3>$55</h3>
-        <span>/ starting at</span>
+        <h3>Coming soon</h3>
+        <!-- <span>/ starting at</span> -->
         <ul>
           <li>Lorem ipsum dolor sit amet</li>
           <li>Lorem ipsum dolor sit amet</li>
@@ -409,13 +404,13 @@
       <img class="footer-logo" src ="images/tawlogo.svg">
       <!-- font for logo is Skia bold -->
       <ul class ="footer-nav">
-        <li><a href="https://twitter.com/_TroyWilson" target="_blank" class="social twitter">Twitter</a></li>
-        <li><a href ="https://www.linkedin.com/in/troy-wilson-019b87a7/" target="_blank" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/TroyAWilson" target="_blank" class="social github">Github</a></li>
+        <li><a class="styledLink" href="https://twitter.com/_TroyWilson" target="_blank" class="social twitter">Twitter</a></li>
+        <li><a class="styledLink" href ="https://www.linkedin.com/in/troy-wilson-019b87a7/" target="_blank" class="social linkedin">LinkedIn</a></li>
+        <li><a class="styledLink" href="https://github.com/TroyAWilson" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">&copy 2018, Troy <span class ="pinkText">A</span> Wilson.</p>
       <div class="icon-madeby">
-        Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        Icons made by <a class="styledLink" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a class="styledLink" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a class="styledLink" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </footer>
 </div>
 <!-- Links to my JS files -->
