Using WebDash as project3 now

--- a/ProjectPages/projectOne.html
+++ b/ProjectPages/projectOne.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" type="image/svg" href="../images/tawlogo.png">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="css/vex.css" >
+    <link rel="stylesheet" href="css/vex-theme-os.css">
+    <link rel="stylesheet" href="css/vex-theme-flat-attack.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
   </head>
   <body>
@@ -76,5 +79,10 @@
             </div>
           </div>
     </div>
+    <script src="scripts/vex.combined.min.js"></script>
+    <script>vex.defaultOptions.className = 'vex-theme-os'</script>
+    <script>vex.defaultOptions.className = 'vex-theme-flat-attack'</script>
+    <script type="text/javascript" src ="scripts\jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src ="scripts\script.js"></script>
   </body>
 </html>
