--- a/index.html
+++ b/index.html
@@ -104,9 +104,6 @@
 
 
   <div id ="Portfolio">
-    <!-- Portfolio section dispalys a picture and when hovered over shows a small description and a link to the github repo
-        May even create a seperate page entirely for when it's clicked explaining the respective project
-    -->
     <div class ="portfolio-container container">
 
         <h4>My Portfolio</h4>
@@ -165,9 +162,9 @@
         </div>
 <!-- Might change this one for a different project so I wont link the anchor -->
         <div class ="project">
-          <img src ="images/Portfolio images/project-ten-thumb.svg">
+          <img src ="images/Portfolio images/dashboardThumb.svg">
           <div class="project-information">
-            <h6>Interactive Photo Gallery</h6>
+            <h6>Web Dashboard</h6>
             <div class="small-hidden">
               <p>Interactive photo gallery  more txt huh</p>
               <span>Primary tools</span>
