--- a/ProjectPages/projectThree.html
+++ b/ProjectPages/projectThree.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Javascript Text Game</title>
+    <title>Web Dashboard</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" type="image/svg" href="../images/tawlogo.png">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -32,7 +32,7 @@
             </div>
           </header>
           <h1>Wheel of Success!</h1>
-          <img class="projectPage-big-image" src="../images/Portfolio images/fullWheelSuccess.svg"></img>
+          <img class="projectPage-big-image" src="../images/Portfolio images/webdashFull.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
               <p>Browser version of "Wheel of Fortune", a word guessing game where players click letters onscreen to try and guess one of five random phrases</p>
@@ -67,12 +67,12 @@
                 });
                 </script>
               </div>
-              <a class="projectPage-link" href="liveProjects/TechdegreeProjectSeven/index.html">See it live!</a>
+              <a class="projectPage-link" href="liveProjects/TechdegreeProjectNine/index.html">See it live!</a>
             </div>
             <div class="projectPage-images-container">
-              <img class="projectPage-small-image" src="../images/Portfolio images/gameboardColorWS.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/keyboardWS.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/HeartsWS.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolio images/webDashIcons.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolio images/webDashNewMembers.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolio images/webDashTwitter.svg" alt="">
             </div>
           </div>
     </div>
