--- a/ProjectPages/projectFour.html
+++ b/ProjectPages/projectFour.html
@@ -61,14 +61,15 @@
                 var myChart = new Chart(ctx, {
                 type: 'pie',
                 data: {
-                labels: ["HTML", "CSS", "Javascript "],
+                labels: ["HTML", "CSS", "Javascript","jQuery"],
                 datasets: [{
                     label: 'Skills',
-                    data: [10, 10, 80],
+                    data: [5, 5, 65,25],
                     backgroundColor: [
                         'rgba(255, 87, 34, 1)',
                         'rgba(33, 150, 243, 1)',
                         'rgba(255, 218, 68, 1)',
+                        'rgba(255,169,69, 1)',
                         // 'rgba(150,50,198,1)',
                         // 'rgba(30,223,113,1)',
                     ],
@@ -76,7 +77,7 @@
                       'rgba(245, 245, 245, 1)',
                       'rgba(245, 245, 245, 1)',
                       'rgba(245, 245, 245, 1)',
-                      // 'rgba(245, 245, 245, 1)',
+                      'rgba(245, 245, 245, 1)',
                       // 'rgba(245, 245, 245, 1)',
                     ],
                     borderWidth: 1
