--- a/ProjectPages/projectOne.html
+++ b/ProjectPages/projectOne.html
@@ -79,6 +79,10 @@
             </div>
           </div>
     </div>
+    <!--
+      At some point I intend to add modal support to the small images on the project pages
+      but this falls to a low priority right now
+    -->
     <script src="scripts/vex.combined.min.js"></script>
     <script>vex.defaultOptions.className = 'vex-theme-os'</script>
     <script>vex.defaultOptions.className = 'vex-theme-flat-attack'</script>
