--- a/ProjectPages/projectFive.html
+++ b/ProjectPages/projectFive.html
@@ -43,15 +43,15 @@
                 var myChart = new Chart(ctx, {
                 type: 'pie',
                 data: {
-                labels: ["HTML", "CSS", "Javascript "],
+                labels: ["HTML", "CSS", "ReactJS"],
                 datasets: [{
                     label: 'Skills',
-                    data: [10, 10, 80],
+                    data: [5, 5, 90],
                     backgroundColor: [
                         'rgba(255, 87, 34, 1)',
                         'rgba(33, 150, 243, 1)',
-                        'rgba(255, 218, 68, 1)',
-                        // 'rgba(150,50,198,1)',
+                        // 'rgba(255, 218, 68, 1)',
+                        'rgba(150,50,198,1)',
                         // 'rgba(30,223,113,1)',
                     ],
                     borderColor: [
