Finally figured out how to get the react app working live

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en">
+<!--
+  Make sure your browser cache is cleared when checking for changes on live sites
+ -->
 <head>
   <meta charset="utf-8">
   <title>Troy A Wilson - Front-end Web Developer</title>
