Changed hover affect for portfolio

--- a/index.html
+++ b/index.html
@@ -119,18 +119,9 @@
               Going to a new html page and having more detail on the project and linking to a live version.
           -->
         <div class ="project">
-          <img src ="images/Portfolio images/project-seven-thumb.svg">
+          <img class="project-image" src ="images/Portfolio images/project-seven-thumb.svg">
           <div class="project-information">
             <h6>Game Show App</h6>
-            <div class="small-hidden">
-              <p>Hang man-like game app using Javascript test test test test test test</p>
-              <span>Primary tools</span>
-              <ul>
-                <li>Javascript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-              </ul>
-            </div>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectSeven -->
             <a class="styledLink" href ="ProjectPages/projectOne.html">
               <div class="link">
@@ -142,18 +133,9 @@
         </div>
 
         <div class ="project">
-        <img src ="images/Portfolio images/project-six-thumb.svg">
+        <img class="project-image" src ="images/Portfolio images/project-six-thumb.svg">
           <div class="project-information">
             <h6>Dynamic Video Player</h6>
-            <div class="small-hidden">
-              <p>Videoe player with dynamic transcript tracking</p>
-              <span>Primary tools</span>
-              <ul>
-                <li>Javascript</li>
-                <li>HTML</li>
-                <li>CSS</li>
-              </ul>
-            </div>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectSix -->
             <a class="styledLink" href ="ProjectPages/projectTwo.html">
               <div class="link">
@@ -163,20 +145,11 @@
             </a>
           </div>
         </div>
-<!-- Might change this one for a different project so I wont link the anchor -->
+
         <div class ="project">
-          <img src ="images/Portfolio images/dashboardThumb.svg">
+          <img class="project-image" src ="images/Portfolio images/dashboardThumb.svg">
           <div class="project-information">
             <h6>Web Dashboard</h6>
-            <div class="small-hidden">
-              <p>Interactive photo gallery  more txt huh</p>
-              <span>Primary tools</span>
-              <ul>
-                <li>Javascript</li>
-                <li>HTML</li>
-                <li>CSS</li>
-              </ul>
-            </div>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectSeven -->
             <a class="styledLink" href ="ProjectPages/projectThree.html">
               <div class="link">
@@ -188,18 +161,9 @@
         </div>
 
         <div class ="project">
-          <img src ="images/Portfolio images/project-ten-thumb.svg">
+          <img class="project-image" src ="images/Portfolio images/project-ten-thumb.svg">
           <div class="project-information">
             <h6>Employee Directory</h6>
-            <div class="small-hidden">
-              <p>I've created a Employee pulling information from the user API</p>
-              <span>Primary tools</span>
-              <ul>
-                <li>Javascript</li>
-                <li>jQuery Plugin</li>
-                <li>Something somtheing API</li>
-              </ul>
-            </div>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectTen -->
             <a class="styledLink" href ="ProjectPages/projectFour.html">
               <div class="link">
@@ -211,18 +175,9 @@
         </div>
 
         <div class ="project">
-          <img src ="images/Portfolio images/project-eleven-thumb.svg">
+          <img class="project-image" src ="images/Portfolio images/project-eleven-thumb.svg">
           <div class="project-information">
             <h6>ReactJS Photo Gallery</h6>
-            <div class="small-hidden">
-              <p>Using the Flickr API and ReactJS I've constructed photo gallery</p>
-              <span>Primary tools</span>
-              <ul>
-                <li>Javascript</li>
-                <li>ReactJS</li>
-                <li>Flickr API</li>
-              </ul>
-            </div>
             <!-- https://github.com/TroyAWilson/techdegree-project-eleven -->
             <a class="styledLink" href ="ProjectPages/projectFive.html">
               <div class="link">
