Added singular animations to projects
Also fixed the broken image problem

--- a/ProjectPages/projectThree.html
+++ b/ProjectPages/projectThree.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Web Dashboard</title>
+    <title>Web Dashboard | Portfolio three</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" type="image/svg" href="../images/tawlogo.png">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -31,7 +31,7 @@
               </ul>
             </div>
           </header>
-          <h1>Wheel of Success!</h1>
+          <h1>Web Dashboard</h1>
           <img class="projectPage-big-image" src="../images/Portfolio images/webdashFull.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
