--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             So the plan right now is to create seperate pages for each respective portfolio link
               Going to a new html page and having more detail on the project and linking to a live version.
           -->
-        <div class ="project">
+        <div class ="project project1">
           <img class="project-image" src ="images/Portfolio images/project-seven-thumb.svg">
           <div class="project-information">
             <h6>Game Show App</h6>
@@ -132,7 +132,7 @@
           </div>
         </div>
 
-        <div class ="project">
+        <div class ="project project2">
         <img class="project-image" src ="images/Portfolio images/project-six-thumb.svg">
           <div class="project-information">
             <h6>Dynamic Video Player</h6>
@@ -146,7 +146,7 @@
           </div>
         </div>
 
-        <div class ="project">
+        <div class ="project project3">
           <img class="project-image" src ="images/Portfolio images/dashboardThumb.svg">
           <div class="project-information">
             <h6>Web Dashboard</h6>
@@ -160,7 +160,7 @@
           </div>
         </div>
 
-        <div class ="project">
+        <div class ="project project4">
           <img class="project-image" src ="images/Portfolio images/project-ten-thumb.svg">
           <div class="project-information">
             <h6>Employee Directory</h6>
@@ -174,7 +174,7 @@
           </div>
         </div>
 
-        <div class ="project">
+        <div class ="project project5">
           <img class="project-image" src ="images/Portfolio images/project-eleven-thumb.svg">
           <div class="project-information">
             <h6>ReactJS Photo Gallery</h6>
