Changing out dummy text

--- a/ProjectPages/projectFive.html
+++ b/ProjectPages/projectFive.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Photo Gallery With ReactJS | Portfolio Five</title>
+    <title>Photo Gallery W/ ReactJS | Portfolio Five</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" type="image/svg" href="../images/tawlogo.png">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -35,7 +35,7 @@
           <img class="projectPage-big-image" src="../images/Portfolio images/fullWheelSuccess.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
-              <p>Browser version of "Wheel of Fortune", a word guessing game where players click letters onscreen to try and guess one of five random phrases</p>
+              <p>Photo gallery utilizing Flickr API built with ReactJS to create a smooth and dynamic experience with an ever evolving potential of photos</p>
               <div class ="projectPage-skillsChart">
                 <canvas id="projectPage-myChart5" ></canvas>
                 <script>
