--- a/ProjectPages/projectThree.html
+++ b/ProjectPages/projectThree.html
@@ -35,7 +35,7 @@
           <img class="projectPage-big-image" src="../images/Portfolio images/webdashFull.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
-              <p>Browser version of "Wheel of Fortune", a word guessing game where players click letters onscreen to try and guess one of five random phrases</p>
+              <p>Web dashboard showing examples of jQuery plugins with graphs and charts, use of SVG's, forms, and flexbox </p>
               <div class ="projectPage-skillsChart">
                 <canvas id="projectPage-myChart3" ></canvas>
                 <script>
