--- a/ProjectPages/projectTwo.html
+++ b/ProjectPages/projectTwo.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Interactive Video Player</title>
+    <title>Dynamic Video Player | Project Two</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" type="image/svg" href="../images/tawlogo.png">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -31,11 +31,11 @@
               </ul>
             </div>
           </header>
-          <h1>Javascript Text Game</h1>
+          <h1>Dynamic Video Player!</h1>
           <img class="projectPage-big-image" src="../images/Portfolio images/fullPicVideoPlayer.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>Video player with dynamic subtitles that highlight as the video plays</p>
               <div class ="projectPage-skillsChart">
                 <canvas id="projectPage-myChart2" ></canvas>
                 <script>
