--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         <div class ="skills-development">
           <img src ="images\programming.svg" width ="50px">
           <h6>Development</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>I create clean and efficent code for a smooth user experience as well as boosting search engine optimization(SEO).</p>
         </div>
 
         <div class ="skills-design">
           <img src ="images\computer-graphic.svg" width ="50px">
           <h6>Design</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Nothing complements clean code quite like a clean design, I create sleek and accessible designs for all users</p>
         </div>
       </div> <!-- End what I do div -->
     </div>
@@ -200,11 +200,11 @@
       <div class ="services-container container">
         <div class ="myServices left">
           <h4>My Servcies</h4>
-          <p class =" left indent">Web development is a broad term for the work involved in developing a web site for the Internet (World Wide Web) or an intranet (a private network). Web development can range from developing the simplest static single page of plain text to the most complex web-based internet applications (or just 'web apps') electronic businesses, and social network services. A more comprehensive list of tasks to which web development commonly refers, may include web </p>
+          <p class =" left indent">I am a developer at heart, developing websites is my passion. I use the lastest in Front-end development technologies such as HTML5, CSS3, ES6, jQuery and Python to create unique websites and web applications. All my code is clean and follows W3C standards</p>
         </div>
 
         <div class="myServices right">
-          <p class ="right indent">'web delopment' usually refers to the main non-design aspects of building web sites: writing markup and coding. Most recently Web development has come to mean the creation of content management systems or CMS. These CMS can be made from scratch, proprietary or open source. In broad terms the CMS acts as middleware between the database and the user through the browser. A principle benefit of a CMS is that it allows non-technical people to make changes to their</p>
+          <p class ="right indent">I am full service which means I got you covered on design and content right through to development. You’ll most likey form a lasting relationship with me, collaboration is central to what I do. Bottom line is I want your idea and or project to succeed and with me at your side, that's exactly what we will achieve.</p>
         </div>
 
         <div class ="services-development services-flex">
@@ -219,7 +219,7 @@
 
         <div class ="services-wordpress services-flex">
           <img src ="images\wordpress-logo-of-a-letter-in-a-circle.svg" width ="50px">
-          <p><span class ="pinkText">W</span>ordpress</p>
+          <p ><span class ="pinkText">C</span>oming Soon!</p>
         </div>
       </div>
     </div>
