Added new header and changing dummy text out

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <div class ="about-conatiner container">
         <div class ="about-goals-skills">
       <div class ="about-info">
+        <h3 class ="about-create">Let's Create Together!<h3>
         <h4>My Goals</h4>
         <p class ="indent">I am a front-end web developer with skills in HTML, CSS, Javascript, and jQuery, Skills I'm currently working on are Python and ReactJS. I'm passionate about learning and growing my skill set to improve myself as a developer.While development is where I feel I truly shine I also have an interest in design with skills in Photoshop and Sketch. </p>
       </div>
@@ -200,7 +201,7 @@
       <div class ="services-container container">
         <div class ="myServices left">
           <h4>My Servcies</h4>
-          <p class =" left indent">I am a developer at heart, developing websites is my passion. I use the lastest in Front-end development technologies such as HTML5, CSS3, ES6, jQuery and Python to create unique websites and web applications. All my code is clean and follows W3C standards</p>
+          <p class =" left indent">I am a developer at heart, developing websites is my passion. I use the lastest in Front-end development technologies such as HTML5, CSS3, ES6, jQuery and Python to create unique websites and web applications. All my code is clean and follows W3C standards. Let's create together!</p>
         </div>
 
         <div class="myServices right">
@@ -250,8 +251,8 @@
         <ul>
           <li>Dynamic responsive websites</li>
           <li>Search engine optimized</li>
-          <li>Unbeateable pricing</li>
-          <li>Really cool guy</li>
+          <li>Clean readable code</li>
+          <li>Unbeatable pricing</li>
         </ul>
         <a href ="#"><span class ="pricing-button"><span>Get a quote</span></span></a>
       </div>
@@ -261,17 +262,17 @@
         <h3>$20</h3>
         <span>/ per hour</span>
         <ul>
-          <li>Lorem ipsum dolor sit amet</li>
-          <li>Lorem ipsum dolor sit amet</li>
-          <li>Lorem ipsum dolor sit amet</li>
-          <li>Lorem ipsum dolor sit amet</li>
+          <li>Easy to navigate</li>
+          <li>Minimalistic</li>
+          <li>Great color design</li>
+          <li>Simple Fun animations</li>
         </ul>
         <a href ="#"><span class ="pricing-button"><span>Get a quote</span></span></a>
       </div>
 
       <div class ="Pricing-box-container">
         <h4>Wordpress</h4>
-        <h3>Coming soon</h3>
+        <h3>Coming soon!</h3>
         <!-- <span>/ starting at</span> -->
         <ul>
           <li>Lorem ipsum dolor sit amet</li>
