Done replacing placeholders
Currently trying to figure out php and how to get my email form to send.

--- a/ProjectPages/projectFive.html
+++ b/ProjectPages/projectFive.html
@@ -32,7 +32,7 @@
             </div>
           </header>
           <h1>Photo Gallery With ReactJS</h1>
-          <img class="projectPage-big-image" src="../images/Portfolio images/fullWheelSuccess.svg"></img>
+          <img class="projectPage-big-image" src="../images/Portfolio images/reactFull.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
               <p>Photo gallery utilizing Flickr API built with ReactJS to create a smooth and dynamic experience with an ever evolving potential of photos</p>
@@ -70,9 +70,9 @@
               <a class="projectPage-link" href="liveProjects/build/index.html">See it live!</a>
             </div>
             <div class="projectPage-images-container">
-              <img class="projectPage-small-image" src="../images/Portfolio images/gameboardColorWS.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/keyboardWS.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/HeartsWS.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolio images/reactDog.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolio images/reactSearch.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolio images/reactBirds.svg" alt="">
             </div>
           </div>
     </div>
