--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <!-- Scripts for the chart plug in -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
+
 </head>
 <body>
   <div class ="main-container">
@@ -323,27 +324,27 @@
       <!-- Need to figure out a way to get this to send without opening the mail thing -->
       <div class ="contact-form">
         <h4>Want <br> To Hire Me?</h4>
-        <form action="mailto:Troyaustynwilson@gmail.com">
+        <form method="post" name="contactform" action="formSend.php" >
           <div class ="form-input">
-            <label for ="">Name:</label>
+            <label for ="name">Name:</label>
             <input type ="text" name="name">
           </div>
 
           <div class ="form-input">
-            <label for ="">Email:</label>
-            <input type ="email" name="mail">
+            <label for ="email">Email:</label>
+            <input type ="email" name="email">
           </div>
 
           <div class ="form-input">
-            <label for ="">Subject:</label>
+            <label for ="subject">Subject:</label>
             <input type ="text" name="subject">
           </div>
 
           <div class ="form-input">
-            <label for ="">Message:</label>
+            <label for ="message">Message:</label>
             <textarea name ="message">
             </textarea>
-            <button type="submit" value = "send" class="contact-submit-button">Submit</button>
+            <button type="submit" value="submit" class="contact-submit-button">Submit</button>
             <!-- Need to remove default behavior on this button -->
           </div>
         </form>
@@ -369,6 +370,8 @@
         Icons made by <a class="styledLink" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a class="styledLink" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a class="styledLink" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </footer>
 </div>
+<!-- PHP link -->
+<?php require "formSend.php"?>
 <!-- Links to my JS files -->
 <script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="scripts/sticky-master/jquery.sticky.js"></script>
