--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 <script type="text/javascript" src="scripts/sticky-master/jquery.sticky.js"></script>
 <script type="text/javascript" src="scripts/script.js"></script>
 </body>
-<!-- and we're done :) -->
+<!-- and we're done :)) -->
 
   <!--
     Project instructions/requirments:
