--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <!-- Scripts for the chart plug in -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
-
-  <?php require "scripts/formSend.php"?>
 </head>
 <body>
   <div class ="main-container">
@@ -256,7 +254,7 @@
           <li>Clean readable code</li>
           <li>Unbeatable pricing</li>
         </ul>
-        <a href ="#"><span class ="pricing-button"><span>Get a quote</span></span></a>
+        <a href ="#Contact"><span class ="pricing-button"><span>Get a quote</span></span></a>
       </div>
 
       <div class ="Pricing-box-container">
@@ -269,7 +267,7 @@
           <li>Great color design</li>
           <li>Simple Fun animations</li>
         </ul>
-        <a href ="#"><span class ="pricing-button"><span>Get a quote</span></span></a>
+        <a href ="#Contact"><span class ="pricing-button"><span>Get a quote</span></span></a>
       </div>
 
       <div class ="Pricing-box-container">
@@ -282,7 +280,7 @@
           <li>Lorem ipsum dolor sit amet</li>
           <li>Lorem ipsum dolor sit amet</li>
         </ul>
-        <a href ="#"><span class ="pricing-button"><span>Get a quote</span></span></a>
+        <a href ="#Contact"><span class ="pricing-button"><span>Get a quote</span></span></a>
       </div>
     </div>
     </div>
@@ -326,7 +324,7 @@
       <div class ="contact-form">
         <h4>Want <br> To Hire Me?</h4>
         <form method="post" name="contactform" action="mailto:TroyAWilson@gmail.com" >
-          <!-- action="formSend.php" -->
+          <!-- action="scripts/formSend.php" -->
           <div class ="form-input">
             <label for ="name">Name:</label>
             <input type ="text" name="name">
@@ -373,7 +371,7 @@
     </footer>
 </div>
 <!-- PHP link -->
-<?php require "scripts/formSend.php"?>
+<!-- <?php require "scripts/formSend.php"?> -->
 <!-- Links to my JS files -->
 <script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="scripts/sticky-master/jquery.sticky.js"></script>
